[package]
name = "ai_api_backend"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-ledger-types = "0.14.0"
ic-llm = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
